# Meepo

./: CMakeLists.txt
include/: opencv  opencv2
include/OpenVINO/: inference_engine
include/camera/: camera_manager.hpp
include/camera/hikvision/: LinuxPlayM4.h  PlayM4.h  hik_capture.hpp
include/camera/usbvision/: usb_capture.hpp
include/camera/videofile/: video_file.hpp
include/detector/: detector.hpp
include/game/: combine.hpp  head_data.hpp  solver.hpp  sync.hpp
include/tracker_manager/: tracker.h  tracker_manager.hpp  tracking_task.hpp
include/util/: Stopwatch.hpp  http_connect.hpp  singleton.h  thread_pool.hpp  util.hpp
resource/: .gitignore
resource/model/head_fp16/: head_fp16.xml
script/: run.sh
src/: CMakeLists.txt  main.cpp
src/camera/: camera_manager.cpp
src/camera/hikvision/: hik_capture.cpp
src/camera/usbvision/: usb_capture.cpp
src/camera/videofile/: video_file.cpp
src/detector/: detector.cpp
src/game/: combine.cpp  head_data.cpp  solver.cpp  sync.cpp
src/tracker_manager/: fhog.cpp  kcftracker.cpp  tracker_manager.cpp
src/util/: Stopwatch.cpp  easylogging.cpp  http_connect.cpp  thread_pool.cpp
